--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -1,9 +1,7 @@
-.apps {
-  /* ----------------------------------------------- */
-  /* ----------------------------------------------- */
-  /* ----------------------------------------------- */
-  /* ----------------------------------------------- */
+.section__wrapper {
+  margin:  0 250px;
 }
+
 .lead__download-links-list {
   display: flex;
   list-style: none;
@@ -25,8 +23,7 @@
   padding: 80px 0 150px 0;
 }
 .apps__subapps-wrapper {
-  width: 1520px;
-  margin: 0 auto;
+  max-width: 1500px;
 }
 .apps__subapps {
   display: flex;
@@ -244,6 +241,25 @@
   white-space: nowrap;
   margin: 0;
   padding: 0;
+}
+@media screen and  (max-width: 1440px) {
+  .section__wrapper {
+    margin: 0 100px;
+  }
+  
+  .apps__subapps-title {
+    margin: 0 0 25px 0;
+    padding: 0;
+    font-size: 76px;
+    line-height: 95px;
+    font-weight: 700; 
+  }
+  .apps__subapps {
+    padding: 30px 0 100px 0;
+  }
+  .apps__subapps {
+    column-gap: 70px;
+}
 }
 @media screen and  (max-width: 992px) {
   .apps__subapps-list {
