--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -12,23 +12,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 26px;
-  line-height: 29px;
+  font-size: 20px;
+  line-height: 22px;
   font-weight: 400;
 
 } 
 .apps__subapps {
   background: #2E2E31;
   color: white;
-  padding: 80px 0 150px 0;
+  padding: 80px 0 100px 0;
 }
 .apps__subapps-wrapper {
   max-width: 1500px;
 }
 .apps__subapps {
   display: flex;
-  column-gap: 135px;
-
+  column-gap: 142px;
+  align-items: center;
 }
 .apps__subapps-title {
   margin: 0 0 25px 0;
