--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -1,5 +1,5 @@
 .section__wrapper {
-  margin:  0 250px;
+  margin:  0 258px;
 }
 
 .lead__download-links-list {
@@ -11,7 +11,6 @@
 .lead__text {
   display: flex;
   align-items: center;
-  justify-content: center;
   font-size: 20px;
   line-height: 22px;
   font-weight: 400;
@@ -40,10 +39,8 @@
   /* text-transform: uppercase; */
 }
 .apps__subapps-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -142,10 +139,10 @@
   justify-content: space-between;
   padding: 65px 0 65px;
   margin: 0;
-  /* column-gap: 182px; */
+  column-gap: 52px;
 }
 .apps__briefs-item {
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 /* .apps__briefs-item-list-color {
   color: black;
@@ -197,11 +194,11 @@
 .apps__brief-image-wrapper:last-of-type::after {
   content: "Android";
 }
-.apps__brief-image {
+/* .apps__brief-image {
   max-width: 100%;
   -o-object-fit: contain;
   object-fit: contain;
-}
+} */
 .apps__future {
   padding: 78px 0 0;
 }
@@ -246,6 +243,9 @@
   .section__wrapper {
     margin: 0 100px;
   }
+  .apps__briefs-item {
+    column-gap: 30px;
+  }
   .apps__brief-text-container {
     max-width: 538px;
   }
@@ -264,6 +264,9 @@
 }
 }
 @media screen and  (max-width: 992px) {
+  .section__wrapper {
+    margin:  0 50px;
+  }
   .apps__subapps-list {
     justify-content: center;
   }
@@ -272,22 +275,42 @@
   }
 }
 @media screen and  (max-width: 768px) {
-  .apps__brief-text-container {
-    max-width: 400px;
-  }
   .section__wrapper {
-    padding: 0 29px;
+    margin: 0 50px;
 }
+.apps__subapps {
+  column-gap: 70px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+  .apps__brief-text-container {
+    max-width: 531px;
+  }
+  
 .apps__briefs {
   padding: 64px 0 0 0;
 }
+.apps__subapps-list {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-rows: 1fr 1fr;
+  margin: 0 0 50px 85px;
+  
+}
   .apps__briefs-item {
-    padding: 50px 0 50px;
-    margin: 0;
-    column-gap: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:  0 ;
+    row-gap: 100px;
+
   }
+  .apps__briefs-item-list {
+    display: none;
+    
+}
   .apps__subapps {
-    padding: 60px 0 0;
+    padding: 80px 0 0 0;
   }
   .apps__brief-image-wrapper {
     margin-right: 23px;
@@ -297,16 +320,17 @@
   }
   .apps__subapps-title {
     margin: 0 0 25px 0;
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 600;
+    font-size: 48px;
+    line-height: 58px;
+    font-weight: 700;
 }
   .apps__subapps-list-item {
     margin: 0 25px 0 0;
   }
   .lead__text {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
   }
   .apps__lead-image {
     width: 140px;
@@ -315,17 +339,19 @@
     margin-top: 0px; 
 }
 .section__title {
-  font-size: 22px;
-    line-height: 26px;
-    font-weight: 600;
+  text-align: center;
+  font-size: 32px;
+    line-height: 38px;
+    font-weight: 700;
 }
 .apps__brief-text {
-  font-size: 14px;
-  line-height: 17px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 21px;
   font-weight: 400;
 }
 .apps__future {
-  padding: 78px 0 0;
+  padding:0;
 }
 }
 @media screen and  (max-width: 376px) {
