--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -81,10 +81,10 @@
 .lead__text-color {
   color: #00A9DE;
 }
-.flex {
+/* .flex {
   display: flex;
   column-gap: 180px;
-}
+} */
 .apps__subapps-list-item-title {
   font-size: 16px;
   line-height: 19px;
@@ -116,12 +116,6 @@
   max-width: 340px;
   max-height: 500px;
 }
-/* .apps__lead-image {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-  object-fit: contain;
-} */
 .apps__lead-links-container {
   margin-bottom: 21px;
 }
@@ -204,7 +198,8 @@
 }
 
 /* ----------------------------------------------- */
-.align_center {
+.align_center,
+.align_wiper {
   font-size: 48px;
   line-height: 58px;
   font-weight: 700;
@@ -275,8 +270,11 @@
   }
 }
 @media screen and  (max-width: 768px) {
+  .align_wiper{
+    margin: 70px 90px 0 0;
+  }
   .section__wrapper {
-    margin: 0 50px;
+    margin: 0 80px;
 }
 .apps__subapps {
   column-gap: 70px;
@@ -286,6 +284,7 @@
 }
   .apps__brief-text-container {
     max-width: 531px;
+    margin-bottom: 100px;
   }
   
 .apps__briefs {
@@ -310,7 +309,7 @@
     
 }
   .apps__subapps {
-    padding: 80px 0 0 0;
+    padding: 80px 0 60px 0;
   }
   .apps__brief-image-wrapper {
     margin-right: 23px;
@@ -319,7 +318,7 @@
     width: 576px;
   }
   .apps__subapps-title {
-    margin: 0 0 25px 0;
+    margin: 50px 0 25px 0;
     font-size: 48px;
     line-height: 58px;
     font-weight: 700;
