--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -481,7 +481,7 @@ a {
     row-gap: 60px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-}
+  }
 }
 @media screen and (max-width: 375px) {
 	.section-first-paragraf{
@@ -490,7 +490,7 @@ a {
   .icon-sfera {
     font-size: 16px;
   }
-  .header-fixed {
+  /* .header-fixed {
     background-color: #0e042b;
     width: 100%;
     height: 45px;
@@ -499,43 +499,14 @@ a {
     left: 0;
     top: -28;
     margin: 20px 10px 0px 0px;
-  }
+  } */
   .section__landing {
-    margin-top: 40px;
+    margin-top: 0;
   }
   .navigation {
     margin-bottom: 48px;
   }
-  .menu {
-    width: 200px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    background-color:#0E042B ;
-    transform: translateX(100%);
-    transition: transform 0.5s;
-    margin-left: 165px;
-    position: fixed;
-    overflow: hidden;
-  }
-  .links {
-	  position: absolute;
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    margin-right: 200px;
-    margin-top: 60px;
-    row-gap: 60px;
-    color: #0E042B;
-  }
-  .menu ul li a{
-    color: white;
-  }
-  .menu ul li a.active{
-    color: #AD1AAF;
-  }
-  
-  .menu-btn {
+  /* .menu-btn {
     width: 60px;
     height: 5px;
     position: absolute;
@@ -544,59 +515,21 @@ a {
     justify-content: end;
     margin: 20px 0 0 275px;
     z-index: 200;
-  }
-  /* .menu-btn span {
-    width: 30px;
-    height: 2px;
-    margin-top: 2px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all 0.5s;
-    background-color: white;
-z-index: 200;
-  }
-  .menu-btn span:nth-of-type(2) {
-    top: calc(50% - 5px);
-  }
-  .menu-btn span:nth-of-type(3) {
-    top: calc(50% + 5px);
-  }
-
-  .menu-btn.active span:first-of-type {
-    transform: translateX(100%);
-
-  }
-  .menu-btn.active span:nth-of-type(1){
-    height: 0;
-  }
-  .menu-btn.active span:nth-of-type(2) {
-    top: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    background-color: #ffff;
-  }
-
-  .menu-btn.active span:nth-of-type(3) {
-    top: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg);
-    background-color: #ffff;
-  }
-
-  .section-button {
-	margin: 20px 0 0 -10px; */
-	
-  /* } */
+  } */
   .section-first-paragraf {
     font-size: 20px;
   }
   .section-first{
-	margin-bottom: 5px;
+	  margin-bottom: 0;
   }
   .link-list-left-color {
-    margin-left: -100px;
+    margin-left: 0px;
     font-size: 14px;
-  } 
+  }
+  .list-left {
+    text-align: center;
+    padding: 48px 0 0px 0;
+  }
   .link-list-left,
   .block-first-color,
   .link-list-left-for-li {
@@ -611,84 +544,104 @@ z-index: 200;
   .link-list-left-for {
     width: 16px;
   }
-  .button-android, .button-iOS {
-    width: 335px;
-    font-size: 14px;
-  }
+  .section-block-one {
+    top: 450px;
+}
+  .lead__download-links-list {
+    
+    padding: 0;
+    row-gap: 10px;
+    margin-top: 400px;
+}
   .section-image-one {
     width: 151px;
     height: 317px;
-    background-image: url(../image/375/block\ 1-1.png);
     margin-right: 30px;
   }
   .section-image-two {
     width: 159px;
     height: 317px;
-    background-image: url(../image/375/block\ 1-2.png);
   }  
   .section-two {
-	margin: 1px -19px 170px -26px;
+	  margin: 1px -19px 170px -26px;
     padding: 0;
   }                  
   .section-two-image-one {
     width: 155px;
     height: 324px;
-    background-image: url(../image/127.61х260-андроид-меню/127.61х260.gif);
     margin: 0 30px 0 0;
   }
   .section-two-image-two {
     width: 155px;
     height: 324px;
-    background-image: url(../image/127.61х260-айфон-меню/127.6х260-айфон.gif);
+
   }
   .block-first-color-for,
   .block-first-color {
-      margin-bottom: 18px;
+    margin-bottom: 18px;
   }
   .block-for {
-	margin: 30px 0 0 15px;
+    margin: 28px 0 20px 0px;
   }
-  
   .block-footer-one {
     padding-bottom: 1px;
   }
   .block-for-image-one {
-    width: 110px;
-    height: 220px;
-    background-image: url(../image/375/block\ 3-1.png);
+    width: 150px;
+    height: 300px;
     margin: 0;
   }
-  .section-img {
+  .block-for-image-two {
+    width: 150px;
+    height: 300px;
+    margin: 0;
+  }
+  /* .section-img {
     background-image: none;
     margin: 0 0 0 2px;
-  }
-  .section-two-image {
+  } */
+  /* .section-two-image {
     margin: 0 0 0 4px;
-  }
-  .section-two-content-message {
-    display: none;
-  }
+  } */
   .section-two-content-social-block-mobile {
     display: block;
     font-size: 24px;
   }
-  .section-two-content-social-block,
-  .section-two-content-number,
-  .about-as-heading {
+  
+  .section-two-content-number {
     font-size: 24px;
     line-height: 37px;
+    padding: 10px;
+  }
+  .section-two-content-message,
+  .section-two-content-social  {
+    font-weight: 400;
+    font-size: 28px;
+    Line-height: 43px;
+  }
+  .section-about-as-heading {
+    margin-top: 60px;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 600;
   }
   .about-as-heading{
-	margin-top: 70px;
+    padding-bottom: 10px;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 600;
+	  margin-top: 40px;
   }
+  .block-for-image {
+    column-gap: 30px;
+}
   .about-as-heading-last {
-    color: #EFEFF5;
     font-size: 24px;
     line-height: 37px;
     text-align: left;
   } 
   .section-as-heading {
-    margin-top: -135px;
+    margin-top: -175px;
     font-size: 20px;
   }
   .section-as-iframe-video {
@@ -702,24 +655,26 @@ z-index: 200;
     background: none;
   }
   .block-seven {
-	margin-top: 50px;
+	  margin-top: 50px;
   }
   .block-seven-paragraf {
     Line-height: 20px;
     font-size: 16px;
   }
   .block-six-link {
+    margin: 0px;
+    padding: 6px 5px 6px 4px;
     font-size: 14px;
     line-height: 20px;
   }
   .block-seven-p {
     font-size: 24px;
-    color:#C9CED4;
     line-height: 34px;
   }
   .block-seven-text {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 19px;
+    font-weight: 400;
   }
   .block-eight-link {
     width: 335px;
@@ -733,27 +688,16 @@ z-index: 200;
     margin-left: 0;
 	  margin-top: 80px;
   }
-  .section-two-content-number {
-    display: none;
-  }
-  .section-two-content-number-two {
-    display: block;
-    margin: 0 0 0 0;
-    padding: 0;
-  }
   .block-seven-paragraf {
-    margin-left: 30px;
+    margin-left: 0px;
+    text-align: start;
   }
   .block-six {
     margin-left: -5px;
   }
-  .block-six-link {
-    color: #AD1AAF;
-    margin: 2px;
-    padding: 5px;
-}
+  
   .block-eight {
-	  margin: 80px 0 0 0;
+	  margin: 50px 0 0 0;
     text-align: center;
   }
   .section-as {
@@ -763,7 +707,8 @@ z-index: 200;
     margin-right: 13px;
   }
   .about-as-heading-last{
-    margin: 0 0 0 1px;
+    text-align: center;
+    margin: 0;
     font-size: 24px;
     line-height: 37px;
   }
@@ -772,15 +717,25 @@ z-index: 200;
     line-height: 20px;
     margin-left: 5px;
   }
-  .block-footer-three {
-    font-size: 10px;
-    line-height: 12px;
-    margin: 0;
-  }
   .block-seven-image {
     width: 200px;
     height: 200px;
-    margin: 0 0 94px 0;
+    margin: 0 0 60px 0;
+  }
+  .block-eight-card {
+    padding: 0;
+    row-gap: 20px;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .block-eight-card-image {
+    width: 150px;
+    height: 300px;
+  }
+  .block-eight-card-list-paragraf {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
   }
 }
 @media screen and (max-width: 320px) {
