--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -192,7 +192,7 @@ background: #1f1f26;
         column-gap: 90px;
     }
     .nav_list-item{
-        margin: 20px 0;
+        margin: 0 0;
     }
 }
 @media  screen and (max-width: 320px){
