--- a/assets/css/startups.css
+++ b/assets/css/startups.css
@@ -4,21 +4,22 @@
   padding: 0;
   column-gap: 30px;
 }
-.startups {
+.startups__wrapper {
+  margin: 0 250px;
+}
+.section__startups {
   background: #2E2E31;
   color: rgba(255, 255, 255, 0.87);
+  padding: 0 0 100px 0;
 }
 .lead {
   display: flex;
   align-items: center;
-  padding-bottom: 200px;
-  column-gap: 180px;
+  column-gap: 170px;
 }
 .lead__texts {
   display: flex;
   flex-direction: column;
-  width: 914px;
-  height: 519px;
 }
 .lead__title {
   font-weight: 700;
@@ -42,21 +43,20 @@
   justify-content: space-between;
 }
 .lead__image {
-  margin-top: 240px;
-  margin-left: -176px;
-  width: 742px;
+  width: 641px;
+  height:400px;
 }
 .text-list__list-item {
   list-style-type: none;
 }
 .description__wrapper {
-  margin: 100px 200px;
+  margin: 100px 250px;
 }
 .description__list__heading {
   margin: 0 0 100px 0;
   font-size: 48px;
   font-weight: 700;
-  line-height:58px;
+  line-height: 58px;
 }
 .description__list {
   list-style-type: none; 
@@ -64,7 +64,7 @@
 	margin: 0 0 200px 45px;
 	padding: 15px 0 5px 0;
   display: flex;
-  column-gap: 380px;
+  column-gap: 260px;
 }
 .description__list__paragraf {
   position: relative;	
@@ -83,7 +83,7 @@
 	top: 0;
 	left: -38px;
 	width: 60px;
-	height: 60px;
+	height: 50px;
 	background: rgb(16, 16, 16);
 	color: rgba(255, 255, 255, 0.87);
 	text-align: center;
@@ -103,20 +103,70 @@
   align-items: center;
 }
 @media screen and (max-width: 768px) {
+  .startups__wrapper {
+    margin: 0 50px;
+}
+  .lead__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 330px;
+  }
+  .lead__title {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 58px;
+  }
+  .lead__images {
+    position: absolute;
+    top: 500px;
+    left: 160px;
+  }
+  .lead__image {
+    width: 400px;
+    height: 250px;
+  }
   .lead__texts {
+    margin-top: 165px;
+  }
+  .description__wrapper {
+    margin: 50px 50px;
+  }
+  .description__list__heading {
+    margin: 0 0 40px 0;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+  }
+  .description__list {
+  margin: 0 0 100px 45px;
+  padding: 0;
+  flex-direction: column;
+  }
+  .frame__wrapper {
+    margin: 0 50px 100px 30px;
+}
+  .frame__list {
+    padding: 0;
+    column-gap: 20px;
+}
+  .frame__list__image {
+    width: 257px;
+    height:250px;
+  }
+  .frame__list__item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+  } 
+}
+  /* .lead__texts {
     display: flex;
     flex-direction: column;
     width: 336px;
     height: 418px;
-}
-  .lead {
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-top: 80px;
-    padding-bottom: 0px;
   }
   .lead__text {
-  
     font-weight: 400;
     font-size: 20px;
     line-height: 27px;
@@ -130,14 +180,8 @@
     height: 132px;
     text-transform: uppercase;
   }
-  .lead__images {
-    margin-bottom: 135px;
-  }
-  .lead__image {
-    width: 303.92px;
-    height: 187.26px;
-  }
-  .lead__button {
+  
+  /* .lead__button {
     width: 504px;
     height: 70px;
     display: flex;
@@ -147,8 +191,8 @@
          column-gap: 20px;
     margin-top: 30px;
     padding-top: 130px;
-  }
-  .description__list {
+  } */
+  /* .description__list {
     
     row-gap: 50px;
     flex-direction: column;
@@ -157,7 +201,7 @@
     width: 262px;
     height: 60px;
     -moz-column-gap: 10px;
-         column-gap: 10px;
+    column-gap: 10px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -166,7 +210,7 @@
     column-gap: 195px;
     
     flex-direction: column;
-}
+  }
   .lead__button__lead-ios {
     width: 222px;
     height: 60px;
@@ -223,4 +267,4 @@
     margin-top: -150px;
     white-space: nowrap;
   }
-}
+} */
