--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -268,7 +268,7 @@
 }
 @media screen and  (max-width: 768px) {
   .align_wiper{
-    margin: 70px 90px 0 0;
+    margin: 30px 90px 0 0;
   }
   .section__wrapper {
     margin: 0 90px;
@@ -289,9 +289,10 @@
   padding: 64px 0 0 0;
 }
 .apps__subapps-list {
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
-  grid-template-rows: 1fr 1fr;
-  margin: 0 0 50px 85px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr; 
+  justify-items: end;
+  /* margin: 0 0 50px 85px; */
   
 }
   .apps__briefs-item {
@@ -299,7 +300,7 @@
     justify-content: center;
     align-items: center;
     padding:  0 ;
-    row-gap: 100px;
+    row-gap: 30px;
 
   }
   .apps__briefs-item-list {
