--- a/assets/css/startups.css
+++ b/assets/css/startups.css
@@ -82,8 +82,8 @@
 	position: absolute;
 	top: 0;
 	left: -38px;
-	width: 60px;
-	height: 50px;
+	width: 50px;
+	height: 48px;
 	background: rgb(16, 16, 16);
 	color: rgba(255, 255, 255, 0.87);
 	text-align: center;
@@ -106,17 +106,32 @@
   .startups__wrapper {
     margin: 0 50px;
 }
+.lead__download-links-list {
+  margin-left: 25px;
+}
   .lead__text {
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 330px;
   }
+  .description__list__paragraf {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+  }
   .lead__title {
     font-weight: 700;
     font-size: 48px;
     line-height: 58px;
   }
+  .description__list__paragraf::before {
+    width: 30px;
+    height: 28px;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 26px;
+}
   .lead__images {
     position: absolute;
     top: 500px;
@@ -144,7 +159,7 @@
   flex-direction: column;
   }
   .frame__wrapper {
-    margin: 0 50px 100px 30px;
+    margin: 0 50px 50px 30px;
 }
   .frame__list {
     padding: 0;
@@ -160,111 +175,3 @@
     line-height: 22px;
   } 
 }
-  /* .lead__texts {
-    display: flex;
-    flex-direction: column;
-    width: 336px;
-    height: 418px;
-  }
-  .lead__text {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 27px;
-  
-  }
-  .lead__title {
-    font-weight: 300;
-    font-size: 36px;
-    line-height: 43.57px;
-    width: 500px;
-    height: 132px;
-    text-transform: uppercase;
-  }
-  
-  /* .lead__button {
-    width: 504px;
-    height: 70px;
-    display: flex;
-    margin-bottom: 20px;
-    flex-direction: row;
-    -moz-column-gap: 20px;
-         column-gap: 20px;
-    margin-top: 30px;
-    padding-top: 130px;
-  } */
-  /* .description__list {
-    
-    row-gap: 50px;
-    flex-direction: column;
-  }
-  .lead__button__lead-android {
-    width: 262px;
-    height: 60px;
-    -moz-column-gap: 10px;
-    column-gap: 10px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-  .frame__list {
-    
-    column-gap: 195px;
-    
-    flex-direction: column;
-  }
-  .lead__button__lead-ios {
-    width: 222px;
-    height: 60px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-  .list {
-    margin-left: 50px;
-    margin-right: 50px;
-    display: flex;
-    flex-wrap: wrap-reverse;
-  }
-  .list__items {
-    margin-top: -180px;
-    margin-left: auto;
-  }
-  .list__circle {
-    background: black;
-    border-radius: 100%;
-    color: #FFFFFF;
-    font-weight: bold;
-    line-height: 60px;
-    text-align: center;
-    width: 60px;
-    height: 60px;
-    font-size: 22px;
-    font-weight: 600;
-  }
-  .text-list__list-item {
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 400;
-    width: auto;
-  }
-  .list__image {
-    width: 403px;
-    height: 372px;
-    margin-left: 150px;
-  }
-  .frame {
-    margin-top: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .frame__image {
-    margin-left: -190px;
-    margin-top: -80px;
-  }
-  .frame__text {
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 400;
-    margin-top: -150px;
-    white-space: nowrap;
-  }
-} */
