--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,6 +1,6 @@
 .video-container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     top: 100px;
     left: 0;
     position: absolute;
@@ -84,6 +84,8 @@ background: #1f1f26;
     width: 100%;
     height: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
     list-style: none;
     text-decoration: none;
@@ -124,7 +126,10 @@ background: #1f1f26;
 @media screen and (max-width:1440px) {
     label.logo{
         font-size: 30px;
-        padding-left: 50px;
+
+    }
+    .nav_menu{
+        margin: 0 auto;
     }
     .nav_list-link{
         font-size: 18px;
@@ -132,26 +137,26 @@ background: #1f1f26;
 }
 @media screen and (max-width:768px) {
     .video-container video {
-        width: 650px;
+        width: 670px;
         height: 500px;
-        margin-left: 37px;
-        margin-top: 54px;
+        margin-left: 50px;
+        margin-top: 58px;
     }
     .video-container .close {
-        top: 50%;
+        top: 7%;
         right: 70px;
     }
     .checkButton{
         display:flex;
         position: absolute;
-        left: 520px;
+        left: 580px;
         margin-bottom: 9px;
     }
     .nav_menu{
         display: flex;
         justify-content: space-between;
         flex-direction: row;
-        column-gap: 330px;
+        column-gap: 100px;
         position: fixed;
         z-index: 99999;
         margin: 0 auto;
@@ -165,25 +170,34 @@ background: #1f1f26;
     }
     .nav_list{
         display: flex;
+        justify-content: flex-start;
+        align-items: center;
         flex-direction: column;
+        row-gap: 20px;
         position: fixed;
         width: 100%;
         height: 100%;
-        top: 140px;
+        top: 120px;
         left: -110%;
         text-align: center;
-        transition: all .5s;
+        transition: all .7s;
         z-index: 99999;
+        backdrop-filter: brightness(40%) ;
     }
     .nav_list-item{
-        height: 50px;
+        height: 40px;
         display: block;
-        margin: 30px 0;
         line-height: 30px;
+        margin-top: 50px;
     }
     .nav_list-link{
         font-size: 20px;
         color: white;
+    }
+    .langs{
+        margin-left: 90px;
+        margin-bottom: 10px;
+
     }
     .nav_list-link:hover,.nav_list-link.active{
         color: white;
