--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -167,6 +167,7 @@
   .item__person .item__person-name {
     font-size: 14px;
     line-height: 5px;
+    margin-top: 150px;
   }
 }
 @media (max-width: 567px) {
