--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -51,9 +51,8 @@ background: #1f1f26;
     justify-content: center;
     background-color:rgba(46, 46, 49, 1);
     height: 80px;
-    width: 100%;
     margin: 0 auto;
-    padding: 40px 0;
+    padding: 40px 256px;
 }
 .button_theme_image {
     margin: 0 auto;
@@ -64,7 +63,7 @@ background: #1f1f26;
     justify-content: center;
     align-items: center;
     column-gap: 20px;
-    margin-left: 200px;
+    margin-right: 85px;
 }
 .logo{
     width: 247px;
@@ -96,7 +95,9 @@ background: #1f1f26;
 .nav_list-link{
     color: rgba(255, 255, 255, 0.87);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 500;
     padding: 7px 13px;
     margin: 40px 0;
 }
@@ -126,9 +127,11 @@ background: #1f1f26;
 @media screen and (max-width:1440px) {
     label.logo{
         font-size: 30px;
-
     }
-
+    .block-logo {
+        column-gap: 10px;
+        margin-right: 0;
+    }
     .nav_menu{
         margin: 0 auto;
     }
@@ -144,27 +147,29 @@ background: #1f1f26;
         margin-top: 58px;
     }
     .video-container .close {
-        top: 7%;
-        right: 70px;
+        position: absolute;
+        left: 675px;
+        top: 80px;
     }
+    
     .checkButton{
         display:flex;
         position: absolute;
-        left: 580px;
+        left: 560px;
         margin-bottom: 9px;
     }
     .nav_menu{
         display: flex;
         justify-content: space-between;
         flex-direction: row;
-        column-gap: 100px;
+        column-gap: 70px;
         position: fixed;
         z-index: 99999;
         margin: 0 auto;
     }
     .block-logo{
         column-gap: 10px;
-        margin-left: 70px;
+        margin-left: -175px;
     }
     label.logo {
         padding-left: 25px;
